fix: update scrollbar styles for consistency and improved aesthetics

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 
 body::-webkit-scrollbar {
   appearance: none;
-  width: 15px;
-  background-color: white;
+  width: 15;
+  background: linear-gradient(to bottom, white, aliceblue)
 }
 
 body::-webkit-scrollbar-thumb {
@@ -41,6 +41,7 @@ body::-webkit-scrollbar-thumb {
 .frame ol li {
   margin-bottom: 5px;
 }
+
 
 .firstFrameFlexBox {
   display: flex;
